tests/ui/diagnostic_namespace/on_unknown/incorrect_format_string.stderr
error[E0432]: foo {}
  --> $DIR/incorrect_format_string.rs:5:5
   |
LL | use std::does_not_exist;
   |     ^^^^^^^^^^^^^^^^^^^ no `does_not_exist` in the root
   |
   = note: unresolved import `std::does_not_exist`

error[E0432]: foo {A}
  --> $DIR/incorrect_format_string.rs:10:5
   |
LL | use std::does_not_exist2;
   |     ^^^^^^^^^^^^^^^^^^^^ no `does_not_exist2` in the root
   |
   = note: unresolved import `std::does_not_exist2`

error[E0432]: unresolved import `std::does_not_exist3`
  --> $DIR/incorrect_format_string.rs:15:5
   |
LL | use std::does_not_exist3;
   |     ^^^^^^^^^^^^^^^^^^^^ foo {}

error[E0432]: unresolved import `std::does_not_exist4`
  --> $DIR/incorrect_format_string.rs:20:5
   |
LL | use std::does_not_exist4;
   |     ^^^^^^^^^^^^^^^^^^^^ foo {A}

error[E0432]: unresolved import `std::does_not_exist5`
  --> $DIR/incorrect_format_string.rs:25:5
   |
LL | use std::does_not_exist5;
   |     ^^^^^^^^^^^^^^^^^^^^ no `does_not_exist5` in the root
   |
   = note: foo {}

error[E0432]: unresolved import `std::does_not_exist6`
  --> $DIR/incorrect_format_string.rs:33:5
   |
LL | use std::does_not_exist6;
   |     ^^^^^^^^^^^^^^^^^^^^ no `does_not_exist6` in the root
   |
   = note: foo {Self} {ItemContext} {Trait} {A}

warning: positional arguments are not permitted in diagnostic attributes
  --> $DIR/incorrect_format_string.rs:3:42
   |
LL | #[diagnostic::on_unknown(message = "foo {}")]
   |                                          ^ remove this format argument
   |
   = help: you can print empty braces by escaping them
   = note: `#[warn(malformed_diagnostic_format_literals)]` (part of `#[warn(unknown_or_malformed_diagnostic_attributes)]`) on by default

warning: this format argument is not allowed in `#[diagnostic::on_unknown]`
  --> $DIR/incorrect_format_string.rs:8:42
   |
LL | #[diagnostic::on_unknown(message = "foo {A}")]
   |                                          ^ remove this format argument
   |
   = note: only `This` is allowed as a format argument, referring to the failed import

warning: positional arguments are not permitted in diagnostic attributes
  --> $DIR/incorrect_format_string.rs:13:40
   |
LL | #[diagnostic::on_unknown(label = "foo {}")]
   |                                        ^ remove this format argument
   |
   = help: you can print empty braces by escaping them

warning: this format argument is not allowed in `#[diagnostic::on_unknown]`
  --> $DIR/incorrect_format_string.rs:18:40
   |
LL | #[diagnostic::on_unknown(label = "foo {A}")]
   |                                        ^ remove this format argument
   |
   = note: only `This` is allowed as a format argument, referring to the failed import

warning: positional arguments are not permitted in diagnostic attributes
  --> $DIR/incorrect_format_string.rs:23:39
   |
LL | #[diagnostic::on_unknown(note = "foo {}")]
   |                                       ^ remove this format argument
   |
   = help: you can print empty braces by escaping them

warning: this format argument is not allowed in `#[diagnostic::on_unknown]`
  --> $DIR/incorrect_format_string.rs:28:39
   |
LL | #[diagnostic::on_unknown(note = "foo {Self} {ItemContext} {Trait} {A}")]
   |                                       ^^^^ remove this format argument
   |
   = note: only `This` is allowed as a format argument, referring to the failed import

warning: this format argument is not allowed in `#[diagnostic::on_unknown]`
  --> $DIR/incorrect_format_string.rs:28:46
   |
LL | #[diagnostic::on_unknown(note = "foo {Self} {ItemContext} {Trait} {A}")]
   |                                              ^^^^^^^^^^^ remove this format argument
   |
   = note: only `This` is allowed as a format argument, referring to the failed import

warning: this format argument is not allowed in `#[diagnostic::on_unknown]`
  --> $DIR/incorrect_format_string.rs:28:60
   |
LL | #[diagnostic::on_unknown(note = "foo {Self} {ItemContext} {Trait} {A}")]
   |                                                            ^^^^^ remove this format argument
   |
   = note: only `This` is allowed as a format argument, referring to the failed import

warning: this format argument is not allowed in `#[diagnostic::on_unknown]`
  --> $DIR/incorrect_format_string.rs:28:68
   |
LL | #[diagnostic::on_unknown(note = "foo {Self} {ItemContext} {Trait} {A}")]
   |                                                                    ^ remove this format argument
   |
   = note: only `This` is allowed as a format argument, referring to the failed import

error: aborting due to 6 previous errors; 9 warnings emitted

For more information about this error, try `rustc --explain E0432`.
